--- a/wiki/Validation.wiki
+++ b/wiki/Validation.wiki
@@ -96,7 +96,7 @@ With an FDR of <0.05 neither !GoMiner nor Gowinda found any significant GO categ
 
 
 
-= Validation that Gowinda eliminates the gene length bias =
+= Validating whether Gowinda eliminates the gene length bias =
 In GWAS studies longer genes do typically have more SNPs and thus also have a higher probability of containing a candidate SNP. This potentially higher fraction of candidate SNPs in longer genes may lead to an artefactual overrepresentation of GO categories containing many long genes. To test the effect of this gene length bias and whether Gowinda efficiently corrects for this bias we introduced one SNP every 100bp into genes having an associated GO category. Furthermore overlapping genes were not discarded, thus this dataset contains the biases which usually complicate GO analysis for GWAS. However, finally we randomly picked 1000 SNPs and compared the results obtained with !GoMiner to the results obtained with Gowinda. 
 
 == Extract the gene_ids of genes having an associated GO term ==
@@ -160,8 +160,8 @@ Although we randomly drew SNPs and would thus not expect an overrepresentation o
 
 [[http://gowinda.googlecode.com/files/corBiased_Gominer_Gowinda.png]]
 
-= Validation that Gowinda identifies significant overrepresentated GO terms =
-To validate that Gowinda correctly identifies significantly overrepresented GO terms, we proceeded in a two step procedure. First we randomly picked five GO categories with a small number of genes (between 5 and 10). We than picked one SNP for ever gene in these GO categories and added randomly drawn SNPs from the length biased  dataset until a total of 1000 SNPs was obtained. Finally we performed a GO term enrichment analysis using Gowinda and tested whether the five randomly picked categories were correctly identified.
+= Validating whether Gowinda identifies overrepresented GO terms =
+To validate that Gowinda correctly identifies significantly overrepresented GO terms, we proceeded in a two step procedure. First we randomly picked five GO categories with a small number of genes (between 5 and 10). We choose small GO categories in order to get conservative estimates of the reliability of Gowinda. We than picked one SNP for ever gene in these GO categories and added randomly drawn SNPs from the length biased SNP dataset until a total of 1000 SNPs was obtained. Finally we performed a GO term enrichment analysis using Gowinda and tested whether the five randomly picked GO categories were correctly identified as significantly overrepresented.
 
 == Identify genes having an associated GO term ==
 {{{
@@ -199,8 +199,8 @@ python ../scripts/pick_random_snps_excepttargetlist.py --snp snps_lengthbiased.t
 {{{
 /System/Library/Frameworks/JavaVM.framework/Versions/1.6.0/Commands/java -Xmx4g -jar /Users/robertkofler/dev/PopGenTools/gowinda/Gowinda.jar --snp-file snps_lengthbiased.txt --candidate-snp-file random_targetsnps.txt --go-association-file association_gominer.txt --annotation-file Flybase.gtf --simulations 1000000 --min-significance 1 --gene-definition exon --threads 8 --output-file gowinda.res --mode gene --min-genes 1
 }}}
-== Results ==
-With an FDR <0.01 we identified 19 significantly enriched GO categories (see below). All five targeted GO categories were successfully identified (marked with an arrow). However we also found that an additional 14 not targeted GO categories showed a significant enrichment (FDR<0.01).  
+== Results for GO category recovery ==
+With an FDR <0.01 we identified 19 significantly enriched GO categories (see below). All five targeted GO categories were successfully identified (marked with an arrow). However we also found an additional 14 not targeted GO categories with a significant enrichment (FDR<0.01), which is due to the nesting of GO categories. 
 {{{
 GO:0046165      1.278   9       0.0000010000    0.0002654000    9       14      14      alcohol_biosynthetic_process    cg32220,cg17725,cg10118,cg8890,cg10688,cg3495,cg10924,cg8251,cg1516
 GO:0019319      0.714   7       0.0000010000    0.0002654000    7       7       7       hexose_biosynthetic_process     cg17725,cg8890,cg10688,cg3495,cg10924,cg8251,cg1516
