--- a/wiki/Validation.wiki
+++ b/wiki/Validation.wiki
@@ -87,11 +87,11 @@ join -1 1 -2 1 tm_gominer.txt tm_gowinda.txt > merged_min_win.txt
 }}}
 The resulting file contains for every GO category (column 1) the p-value obtained with !GoMiner (column 2) and Gowinda (column 3) and may easily be analyzed with R.
 
-== Results == 
+== Results for unbiased analysis == 
 Our results (including our random SNPs) for the comparision of Gowinda with !GoMiner can be found here: http://gowinda.googlecode.com/files/step1_valGoMiner.zip
 With an FDR of <0.05 neither !GoMiner nor Gowinda found any significant GO categories. The p-values (not FDR corrected) for the different GO categories obtained by Gowinda and GoMiner are highly correlated (Spearman's rank correlation; rho=0.9999005; p-value < 2.2e-16), see graph below:
 
-[[http://gowinda.googlecode.com/files/cor_gowinda_gominer.png]]
+http://gowinda.googlecode.com/files/cor_gowinda_gominer.png
 
 
 
@@ -153,7 +153,7 @@ cat gowinda_res.txt| awk '{print $1,$4}'|sort -k1,1 > merged/tm_gowinda.txt
 cat GoMiner/subset_genes.txt.change |awk 'NF>5{print $1,10^$5}'|perl -pe 's/_[^ ]+//' |sort -k1,1> merged/tm_gominer.txt
 join -1 1 -2 1 tm_gominer.txt tm_gowinda.txt > merged_min_win.txt
 }}}
-== Results ==
+== Results for length biased analysis==
 Our results of this analysis can be found here: http://gowinda.googlecode.com/files/step2_lengthBias.zip
 
 Although we randomly drew SNPs and would thus not expect an overrepresentation of any GO term, !GoMiner reports that 341 GO terms have an significant overrepresentation (FDR <0.05), which suggests that the gene length bias has an tremendous influence on GO term analysis. By contrast Gowinda which corrects for the gene length bias (by random permuting the set of candidate SNPs) correctly reports that none of the GO terms show any significant overrepresentation (FDR <0.05). The correlation between the p-values obtained with Gowinda and !GoMiner (Spearman's rank correlation; rho=0.5610065; p-value < 2.2e-16) is much worse as compared to the unbiased data set. Assuming that Gowinda yields reliable results (see validation above), these results clearly demonstrate the tremendous impact of the gene length bias on GO analysis. In fact the length bias results in 341 artefactual overrepresented GO categories.  The following graph shows the correlation of the p-values obtained with Gowinda and !GoMiner using the length biased dataset. 
