--- a/wiki/Validation.wiki
+++ b/wiki/Validation.wiki
@@ -17,7 +17,8 @@ This archive contains:
   * the annotation of _D. melanogaster_ (v5.43)
   * the GO associations obtained from !GoMiner for 'CG' gene_ids
 
-Results for validating Gowinda
+=== Results for validating Gowinda ===
+As our approach for validating Gowinda contains several random drawing steps we provide our results for these random steps below in order to allow an exact reproduction of our results.
   * biased dataset: http://gowinda.googlecode.com/files/step1_valGoMiner.zip
   * unbiased dataset: http://gowinda.googlecode.com/files/step2_lengthBias.zip
   * known recovery: http://gowinda.googlecode.com/files/step3_knownRecovery.zip
@@ -90,12 +91,12 @@ join -1 1 -2 1 tm_gominer.txt tm_gowinda.txt > merged_min_win.txt
 The resulting file contains for every GO category (column 1) the p-value obtained with !GoMiner (column 2) and Gowinda (column 3) and may easily be analyzed with R.
 
 == Results for unbiased analysis == 
-Our results (including our random SNPs) for the comparision of Gowinda with !GoMiner can be found here: http://gowinda.googlecode.com/files/step1_valGoMiner.zip
 With an FDR of <0.05 neither !GoMiner nor Gowinda found any significant GO categories. The p-values (not FDR corrected) for the different GO categories obtained by Gowinda and GoMiner are highly correlated (Spearman's rank correlation; rho=0.9999005; p-value < 2.2e-16), see graph below:
 
 http://gowinda.googlecode.com/files/cor_gowinda_gominer.png
 
 
+Our results (including our random SNPs) for the comparision of Gowinda with !GoMiner can be found here: http://gowinda.googlecode.com/files/step1_valGoMiner.zip
 
 
 = Validating whether Gowinda eliminates the gene length bias =
@@ -156,11 +157,11 @@ cat GoMiner/subset_genes.txt.change |awk 'NF>5{print $1,10^$5}'|perl -pe 's/_[^ 
 join -1 1 -2 1 tm_gominer.txt tm_gowinda.txt > merged_min_win.txt
 }}}
 == Results for length biased analysis==
-Our results of this analysis can be found here: http://gowinda.googlecode.com/files/step2_lengthBias.zip
-
 Although we randomly drew SNPs and would thus not expect an overrepresentation of any GO term, !GoMiner reports that 341 GO terms have an significant overrepresentation (FDR <0.05), which suggests that the gene length bias has an tremendous influence on GO term analysis. By contrast Gowinda which corrects for the gene length bias (by random permuting the set of candidate SNPs) correctly reports that none of the GO terms show any significant overrepresentation (FDR <0.05). The correlation between the p-values obtained with Gowinda and !GoMiner (Spearman's rank correlation; rho=0.5610065; p-value < 2.2e-16) is much worse as compared to the unbiased data set. Assuming that Gowinda yields reliable results (see validation above), these results clearly demonstrate the tremendous impact of the gene length bias on GO analysis. In fact the length bias results in 341 artefactual overrepresented GO categories.  The following graph shows the correlation of the p-values obtained with Gowinda and !GoMiner using the length biased dataset. 
 
 [[http://gowinda.googlecode.com/files/corBiased_Gominer_Gowinda.png]]
+
+Our results of this analysis can be found here: http://gowinda.googlecode.com/files/step2_lengthBias.zip
 
 = Validating whether Gowinda identifies overrepresented GO terms =
 To validate that Gowinda correctly identifies significantly overrepresented GO terms, we proceeded in a two step procedure. First we randomly picked five GO categories with a small number of genes (between 5 and 10). We choose small GO categories in order to get conservative estimates of the reliability of Gowinda. We than picked one SNP for ever gene in these GO categories and added randomly drawn SNPs from the length biased SNP dataset until a total of 1000 SNPs was obtained. Finally we performed a GO term enrichment analysis using Gowinda and tested whether the five randomly picked GO categories were correctly identified as significantly overrepresented.
@@ -228,3 +229,5 @@ GO:0046395      3.068   11      0.0001050000    0.0096698421    11      38      
 GO:0016054      3.068   11      0.0001050000    0.0096698421    11      38      38      organic_acid_catabolic_process  cg7399,cg4586,cg1555,cg4779,cg3626,cg6638,cg9709,cg9527,cg9363,cg9362,
 cg2155
 }}}
+
+Our results for this analysis can be found here: http://gowinda.googlecode.com/files/step3_knownRecovery.zip
