Edited wiki page Manual through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -4,10 +4,10 @@
 
 = Introduction =
 
-Gowinda is a software for identifying significant enrichment of GO categories from genome wide association studies (GWAS). GO analysis from GWAS studies frequently suffer from a gene length bias, in which longer genes typically have more SNPs and consequently also have a higher probability of containing a candidate SNPs. Classical GO analysis in which the genes containing a candidate SNP are compared to the total set of genes may result in an overrepresentation of GO categories having a high fraction of long genes. In fact for an example of 1000 randomly drawn candidate SNPs in _D. melanogaster_ we show that an uncorrected GO analysis may identify ~341 false positive GO categories. A further source of bias are overlapping genes, which violate the assumption of the classical GO analysis, that genes are drawn independently .
+Gowinda is a software for identifying significant enrichment of GO categories from genome wide association studies (GWAS). GO analysis from GWAS studies frequently suffer from a gene length bias, in which longer genes typically have more SNPs and consequently also have a higher probability of containing a candidate SNPs. Classical GO analysis in which the genes containing a candidate SNP are compared to the total set of genes may result in an overrepresentation of GO categories having a high fraction of long genes. In fact for an example of 1000 randomly drawn candidate SNPs in _D. melanogaster_ we show that an uncorrected GO analysis may identify ~341 false positive GO categories (http://code.google.com/p/gowinda/wiki/Validation). A further source of bias are overlapping genes, which violate the assumption of the classical GO analysis, that genes are drawn independently .
 Gowinda addresses these two sources of error with a permutation test. Gowinda randomly draws the same number of SNPs as candidate SNPs, several million times, and subsequently derives an empirical null distribution of the abundance of genes for every GO category. P-values for the candidate SNPs are derived by comparing the abundance of genes resulting from the candidate SNPs to the empirical null distribution. Furthermore FDR correction for multiple testing is also done from the empirical null distribution.
 
-For a validation of Gowinda please see:
+For a validation of Gowinda please see: http://code.google.com/p/gowinda/wiki/Validation
 In this validation we show that Gowinda yields highly reliable results (comparision with !GoMiner) efficiently corrects for the gene length bias while still identifying significantly overrepresented GO categories.
 
 = Requirements =
