Edited wiki page Manual through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -44,11 +44,6 @@ The user may thus assure that the annotation is correctly converted before provi
 = Gowinda =
 
 = Scripts =
-== Gff2Gtf.py ==
-== Gominer2FuncAssociate.py ==
+== !Gff2Gtf.py ==
+== !Gominer2FuncAssociate.py ==
 
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
