--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -36,6 +36,8 @@ Gowinda does not support the `.gff` format as it less transparent as the `.gtf` 
 We however provide a script for converting a `.gff` file into a `.gtf` file: http://gowinda.googlecode.com/files/Gff2Gtf.py
 
 The user may thus assure that the annotation is correctly converted before providing it to Gowinda. 
+== GO association ==
+The GO association file may be directly obtained from the download section of FuncAssociate2 (http://llama.mshri.on.ca/funcassociate/download_go_associations) or indirectly from GoMiner (see tutorial: http://code.google.com/p/gowinda/wiki/Tutorial?ts=1330597385&updated=Tutorial)
 
 = Gowinda =
 
