--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -56,10 +56,9 @@ GO:0000017      alpha-glucoside transport       CG30035
 The file consists of three tab-delimited columns
   * column 1: the GO category
   * column 2: the description of the GO category. Note that spaces are allowed but no tabs
-  * column 3: a space separated list of gene ids for the given GO 
-category
+  * column 3: a space separated list of gene ids for the given GO category
 
-*NOTE*: the `gene_ids` of the annotation need to be identical to the `gene_ids` of the GO association file. The case is not considered as Gowinda internally converts all `gene_ids` to lower-case.
+*NOTE:* the `gene_ids` of the annotation need to be identical to the `gene_ids` of the GO association file. The case is not considered as Gowinda internally converts all `gene_ids` to lower-case.
 However a problem may arise as many `gene_ids` have synonyms. One strategy to deal with this problem is to use the GO association file from !GoMiner (see tutorial http://code.google.com/p/gowinda/wiki/Tutorial)
 
 == total SNP files ==
@@ -79,7 +78,20 @@ This file must contain all the SNPs used for the GWAS in a very simple tab-delim
   * column 1: the chromosome
   * column 2: the position
 
-NOTE: Gowinda ignores all additional columns after column 2, thus it is for example also possible to provide a pileup file format 
+*NOTE:* Gowinda ignores all additional columns after column 2, thus it is for example also possible to provide a pileup file  as shown in the followinge example
+{{{
+2R	2296	N	1	^5A	A	1	^5A	A
+2R	2297	N	2	G^8G	AA	2	G^8G	AA
+2R	2298	N	3	AA^8A	AAA	3	AA^8A	AAA
+2R	2299	N	4	TTT^FT	AAAA	4	TTT^FT	AAAA
+2R	2300	N	5	AAAA^FA	AAAAA	5	AAAA^FA	AAAAA
+2R	2301	N	6	TTTTT^FT	AAAAAA	6	TTTTT^FT	AAAAAA
+2R	2302	N	7	TTTTTT^FT	AAAAAAA	7	TTTTTT^FT	AAAAAAA
+2R	2303	N	8	TTTTTTT^FT	AAAAAAAA	8	TTTTTTT^FT	AAAAAAAA
+2R	2304	N	9	CCCCCCCC^FC	AAAAAAAAA	9	CCCCCCCC^FC	AAAAAAAAA
+2R	2305	N	10	CCACCCCCC^FC	AAAAAAAAAA	10	GCCCCCCCC^FC	AAAAAAAAAA
+
+}}}
 
 
 = Gowinda =
