--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -103,7 +103,7 @@ Gowinda has the following input parameters
   * `--simulations`: the number of simulations that should be performed. This will have a direct influence on the minimum possible p-value; For example with 1.000.000 simulations the minimum possible p-value is 1.0e-6; Increase the number of simulations if you need a higher resoultion/precision; Note that incresasing the number of simulations will not result in larger numbers of significant GO categories
   * `--mode`: Gowinda offers to analysis modes either `snp` or `gene`; For description see below; Optional parameter; default=`gene`
   * `--min-genes`: filter for GO categories having at least `--min-genes` number of genes; This parameter is for example useful to remove small GO categories having only one associated gene; Optional parameter; default=1
-  * `--min-significance`: only report GO categories having  after FDR correction a `p-value < --min-significance`; Optional parameter; default=1.0
+  * `--min-significance`: only report GO categories having  after FDR correction `p-value <= --min-significance`; Optional parameter; default=1.0
 
 === analysis mode `gene` ===
 === analysis mode `snp` ===
