--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -100,10 +100,14 @@ Gowinda has the following input parameters
   * `--go-association-file`: a file containing for every GO term the associated genes; For the file format see above; Mandatory parameter
   * `--snp-file`: a file containing the total set of SNPs that were used for the GWAS. For the file format see above; Mandatory parameter
   * `--candidate-snp-file`: a file containing the candidate SNPs that show some association with the trait of interest. For the file format see above; Mandatory parameter
-  * `--simulations`: the number of simulations that should be performed. This will have a direct influence on the minimum possible p-value; For example with 1.000.000 simulations the minimum possible p-value is 1.0e-6; Increase the number of simulations if you need a higher resoultion/precision; Note that incresasing the number of simulations will not result in larger numbers of significant GO categories
+  * `--gene-definition`: Gowinda needs to decide for every SNP whether an association with any genes exists (SNP to gene mapping). With this parameter it is possible to adjust the method for this SNP to gene mapping. see detailed description below; possible arguments: `exon`, `cds`, `utr`,`gene`, `upstreamDDDD`, `downstreamDDDD`, `updownstreamDDDD`; Mandatory parameter 
   * `--mode`: Gowinda offers to analysis modes either `snp` or `gene`; For description see below; Optional parameter; default=`gene`
+  * `--simulations`: the number of simulations that should be performed. This will have a direct influence on the minimum possible p-value; For example with 1.000.000 simulations the minimum possible p-value is 1.0e-6; Increase the number of simulations if you need a higher resoultion/precision; Note that incresasing the number of simulations will not result in larger numbers of significant GO categories
   * `--min-genes`: filter for GO categories having at least `--min-genes` number of genes; This parameter is for example useful to remove small GO categories having only one associated gene; Optional parameter; default=1
   * `--min-significance`: only report GO categories having  after FDR correction `p-value <= --min-significance`; Optional parameter; default=1.0
+
+
+ with this parameter the user may choose which SNPs are considered to be associated with a gene. For example are only SNPs within exons considered or
 
 === analysis mode `gene` ===
 === analysis mode `snp` ===
