--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -111,9 +111,16 @@ Gowinda has the following input parameters
   * `--help`: show the help for Gowinda; Optional parameter
 
 === analysis mode `gene` ===
+Gowinda randomly picks SNPs until the corresponding number of genes equals the number of genes associated with the candidate SNPs. The number of genes is thus constant in each round of random sampling but the number of randomly picked SNPs may differ between rounds.
 
+*NOTE:* in this mode every gene is considered only once even when containing several candidate/random SNPs.
+
+We generally recommend this mode.
 
 === analysis mode `snp` ===
+Gowinda randomly picks SNPs until the corresponding number of SNPs equals the number of candidate SNPs. The number of SNPs is thus constant in each round of random sampling but the number of corresponding genes may differ between rounds. Furthermore genes may be counted multiple times according to the number of contained candidate SNPs. 
+
+We recommend this mode when assuming that linkage disequilibrium decays quickly and that the candidate SNPs are thus independent.
 
 === SNP to gene mapping ===
 
