--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -123,8 +123,11 @@ In this modus Gowinda randomly picks SNPs until the number of random SNPs equals
 We recommend this mode when assuming that linkage disequilibrium decays quickly and that the candidate SNPs are thus independent.
 
 === SNP to gene mapping ===
-SNP to gene mapping determines the genes that are associated with a given SNP. For example a user may elect that only SNPs in exons are associated with genes or another user - more interested in regulatory regions - may choose that also SNPs at most 500bp upstream of the first exon are associated with genes. Gowinda thus offers the following options for SNP to gene mapping:
-  * exon: only SNPs within exons are associated fro
+SNP to gene mapping determines the genes that are associated with a given SNP. For example a user may elect that only SNPs in exons are associated with genes or another user - more interested in regulatory regions - may choose that also SNPs at most 500bp upstream of the first exon are associated with genes. Gowinda only loads the genomic features `exon` and `cds` all following features are thus internally calculated from these two. 
+  * `exon`: only SNPs within exons are associated with genes
+  * `cds`: only SNPs within CDS are associated with genes
+  * `utr`: only SNPs within 5'-UTR and 3'-UTR are associated with genes. Caluclated as `exon - cds`
+  * `gene`: only SNPs within exons or introns are associated with genes. Internally the distance from the start position of the first exon
 
 
 
