--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -128,7 +128,9 @@ SNP to gene mapping determines the genes that are associated with a given SNP. F
   * `cds`: SNPs within CDS are associated with genes
   * `utr`: SNPs within 5'-UTR and 3'-UTR are associated with genes. Caluclated as `exon - cds`
   * `gene`: SNPs within exons or introns are associated with genes. Internally the distance from the start position of the first exon to the end position of the last exon is computed
-  * `upstreamDDDD`: in addition to exons and introns also the DDDD upstream bases are considered for mapping a SNP to a gene. DDDD must be replaced with an arbitrary number. This information requires the strand.
+  * `upstreamDDDD`: in addition to exons and introns also the DDDD bases upstream the start of a gene are considered for mapping a SNP to a gene. DDDD must be replaced with an arbitrary number. This method requires the strand information.
+  * `downstreamDDDD`: in addition to exons and introns also the DDDD bases downstream of the end of the gene are considered for mapping a SNP to a gene. DDDD must be replaced with an arbitrary number. This method requires the strand information.
+  * `updownstreamDDDD`: in addition to  exons and introns also the DDDD bases upstream the start of a gene and the DDDD bases downstream of the end of a gene are considered for mapping a SNP to a gene. DDDD must be replaced with an arbitrary number. This method does NOT require strand information. 
 
 
 *NOTE:* we found examples where exons from a single gene are on opposite strands, in this case Gowinda uses the majority vote, i.e.: the strand of the most exons
