Edited wiki page Manual through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -111,16 +111,16 @@ Gowinda has the following input parameters
   * `--help`: show the help for Gowinda; Optional parameter
 
 === analysis mode `gene` ===
-In this modus Gowinda randomly picks SNPs until the corresponding number of genes equals the number of genes associated with the candidate SNPs. The number of genes is thus constant in each round of random sampling but the number of randomly picked SNPs may differ between rounds.
+In this mode Gowinda randomly picks SNPs until the corresponding number of genes equals the number of genes associated with the candidate SNPs. The number of genes is thus constant in each round of random sampling but the number of randomly picked SNPs may differ between rounds. Finally to derive the p-values, the numbers of candidate genes (genes having a candidate SNP) are compared to the empirical null distribution for every GO category.
 
 *NOTE:* in this mode every gene is considered only once even when containing several candidate/random SNPs.
 
 We generally recommend this mode.
 
 === analysis mode `snp` ===
-In this modus Gowinda randomly picks SNPs until the number of random SNPs equals the number of candidate SNPs. The number of SNPs is thus constant in each round of random sampling but the number of corresponding genes may differ between rounds. Furthermore genes will be counted multiple times according to the number of contained candidate SNPs. 
+In this mode Gowinda randomly picks SNPs until the number of random SNPs equals the number of candidate SNPs. The number of SNPs is thus constant in each round of random sampling but the number of corresponding genes may differ between rounds. Furthermore genes will be counted multiple times according to the number of contained candidate/random SNPs. Finally to derive p-values the numbers of candidate genes, whereas each gene may be counted several times, are compared to the empirical null distribution for every GO category.
 
-We recommend this mode when assuming that linkage disequilibrium decays quickly and that the candidate SNPs are thus independent.
+We recommend this mode when assuming that linkage disequilibrium decays quickly and that the candidate SNPs are thus independently.
 
 === SNP to gene mapping ===
 SNP to gene mapping determines the genes that are associated with a given SNP. For example a user may elect that only SNPs in exons are associated with genes or another user - more interested in regulatory regions - may choose that also SNPs at most 500bp upstream of the first exon are associated with genes. Gowinda only loads the genomic features `exon` and `cds` all following features are thus internally calculated from these two. 
